--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
     "moment": "^2.29.4",
     "prisma": "^4.16.2",
     "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
     "react-dotenv": "^0.1.3",
+    "react-input-emoji": "^5.6.5",
+    "react-intersection-observer": "^9.5.2",
     "react-router-dom": "^6.16.0",
     "react-scripts": "5.0.1",
     "sass": "^1.69.1",
